package com.example.vaughan.airlinereservation;

public class FlightsSchema {
    public final static String NAME = "FLIGHTS";
    public final static class Attributes{
        public final static String CAPACITY = "capacity";
        public final static String ORIGIN = "origin";
        public final static String DESTINATION = "destination";
        public final static String TIME = "time";
        public final static String FLIGHT_NO = "flight_no";
        public final static String COST = "cost";
        public final static String UUID = "uuid";

    }
}
