package com.example.vaughan.airlinereservation;

public class ReservationSchema {
    public final static String NAME = "Reservation";

    public static final class Attribtues{
        public final static String UserName = "Username";
        public final static String FlightNo = "flight_No";
        public final static String numTicks = "numTicks";
        public final static String reservationId = "res_id";
        public final static String ISCANCELED = "isCanceled";
    }
}
