@startuml

title __APP's Class Diagram__\n

  package com.example.vaughan.airlinereservation {
    class AccountCreate {
    }
  }
  

  package com.example.vaughan.airlinereservation {
    class BuildConfig {
    }
  }
  

  package com.example.vaughan.airlinereservation {
    class ExampleInstrumentedTest {
    }
  }
  

  package com.example.vaughan.airlinereservation {
    class Flight {
    }
  }
  

  package com.example.vaughan.airlinereservation {
    class FlightCursorWrapper {
    }
  }
  

  package com.example.vaughan.airlinereservation {
    class FlightsHelper {
    }
  }
  

  package com.example.vaughan.airlinereservation {
    class FlightsSchema {
    }
  }
  

  package com.example.vaughan.airlinereservation {
    class MainMenu {
    }
  }
  

  package com.example.vaughan.airlinereservation {
    class Person {
    }
  }
  

  package com.example.vaughan.airlinereservation {
    class PersonCursorWrapper {
    }
  }
  

  package com.example.vaughan.airlinereservation {
    class PersonHelper {
    }
  }
  

  package com.example.vaughan.airlinereservation {
    class PersonSchema {
    }
  }
  

  package android.support.drawerlayout {
    class R {
    }
  }
  

  package android.support.slidingpanelayout {
    class R {
    }
  }
  

  package android.support.asynclayoutinflater {
    class R {
    }
  }
  

  package androidx.versionedparcelable {
    class R {
    }
  }
  

  package android.support.documentfile {
    class R {
    }
  }
  

  package android.support.constraint {
    class R {
    }
  }
  

  package android.support.coreui {
    class R {
    }
  }
  

  package android.support.v7.appcompat {
    class R {
    }
  }
  

  package android.support.localbroadcastmanager {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.livedata {
      class R {
      }
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.viewmodel {
      class R {
      }
    }
  }
  

  package android.support.cursoradapter {
    class R {
    }
  }
  

  package android.support.swiperefreshlayout {
    class R {
    }
  }
  

  package android.support.coreutils {
    class R {
    }
  }
  

  package android.support.v7.viewpager {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.livedata {
      package android.arch.lifecycle.livedata.core {
        class R {
        }
      }
    }
  }
  

  package android.support.loader {
    class R {
    }
  }
  

  package android.support.print {
    class R {
    }
  }
  

  package com.example.vaughan.airlinereservation {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    class R {
    }
  }
  

  package android.support.customview {
    class R {
    }
  }
  

  package android.arch.core {
    class R {
    }
  }
  

  package android.support.fragment {
    class R {
    }
  }
  

  package android.support.coordinatorlayout {
    class R {
    }
  }
  

  package android.support.compat {
    class R {
    }
  }
  

  package android.support.graphics.drawable {
    class R {
    }
  }
  

  package android.support.interpolator {
    class R {
    }
  }
  

  package com.example.vaughan.airlinereservation {
    class ReservationSchema {
    }
  }
  

  AccountCreate -up-|> AppCompatActivity
  AccountCreate o-- PersonHelper : personHelper
  FlightCursorWrapper -up-|> CursorWrapper
  FlightsHelper -up-|> SQLiteOpenHelper
  MainMenu -up-|> AppCompatActivity
  PersonCursorWrapper -up-|> CursorWrapper
  PersonHelper -up-|> SQLiteOpenHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
